update for new packages and groupId and artifactId